--- a/file_access_api/index.html
+++ b/file_access_api/index.html
@@ -15,7 +15,7 @@
   <h2>Simple Local File Editor</h2>
   
   <div>
-    <button id="openBtn">1. Open a Text File</button>
+    <button id="openBtn">1. Open a File</button>
     <button id="saveBtn" disabled>2. Save Changes</button>
   </div>
 
